--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Egyszemélyes logikai játékok</title>
 </head>
 <body>
-    <header>
+    <header class="jumbotron">
         <h1>Egyszemélyes logikai játékok</h1>
     </header>
     <div class="container">
