--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>A játékot 1883-ban Édouard Lucas francia matematikus találta fel. Az ötletet egy legendából vette, ami szerint a világ megteremtésekor egy 64 korongból álló tornyot kezdtek átmozgatni Brahma szerzetesei. A szabályok azonosak voltak a ma ismert hanoi torony szabályaival. A legenda szerint, amikor a szerzetesek végeznek majd a korongok átjuttatásával a harmadik rúdra, a kolostor összeomlik, és a világunk megszűnik létezni.</p>
             </div>
             <div class="col-md-4 align-self-center kep-jobb">
-                <!-- Kép helye -->
+                <img src="hanoi.png" class="img-fluid" alt="Hanoi tornyai" title="Hanoi tornyai">
             </div>
         </div>
         <div class="row">
