--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h2>Rubik-kocka</h2>
                 <p>A Rubik-kocka háromdimenziós mechanikus logikai játék, amit 1974-ben talált fel ifjabb Rubik Ernő. A Rubik-kocka eredeti neve a magyar kereskedelemben bűvös kocka volt. A szabadalmi leírásban a feltaláló térbeli logikai játékként nevezte meg a mechanikus, egyéni logikai játékot, amelynek célja, hogy egy előzetesen összekevert kockából forgatással visszaállítsuk az eredeti, rendezett színösszeállítást, vagyis minden oldalon azonos színű lapocskák legyenek.</p>
                 <fieldset>
-                    <p>Magyar rekordok:</p>
+                    <legend>Magyar rekordok:</legend>
                     <div class="card">
                         <table>
                             <tr>
@@ -56,7 +56,7 @@
                         </table>
                         <br>
                         <p class="text-center">
-                            <input type="range" min="2" oninput="frissit(this.value);">
+                            <input type="range" min="3" max="7"   oninput="frissit(this.value);">
                         </p>
                     </div>
                 </fieldset>
